# viennamath-dev

./: CMakeLists.txt  CTestConfig.cmake  clean.sh  interface.txt
cmake/: CMakeLists.txt.in  ViennaMathCommon.cmake  ViennaMathConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
doc/manual/: additional.tex  advanced.tex  basic-types.tex  benchmarks.tex  installation.tex  introduction.tex  manipulation.tex  viennamath.kilepr  viennamath.tex
examples/: CMakeLists.txt  basic.cpp  basic_test.cpp  compiletime_evaluation.cpp  compiletime_test.cpp  diff_test.cpp  fem.cpp  fem_lame.cpp  fem_poisson.cpp  functor_test.cpp  integration.cpp  latex.cpp  latex_output.cpp  model_benchmark.cpp  newton_solve.cpp  runtime_test.cpp  substitute.cpp  substitute_test.cpp  test.cpp  traversal.cpp  vector_expr.cpp
examples/tutorials/: CMakeLists.txt  basic.cpp  benchmark-utils.hpp  model_benchmark.cpp
tests/: CMakeLists.txt  equation_test.cpp  run_regression.sh
tests/src/: compiletime_evaluation.cpp  compiletime_manipulation.cpp  compiletime_test.cpp  diff_test.cpp  equation_test.cpp  external_1.cpp  external_2.cpp  integral_test.cpp  runtime_test.cpp
viennamath/: apply_coordinate_system.hpp  binary_expression.hpp  binary_expression_operations.hpp  binary_operators.hpp  binary_operators_manipulation.hpp  constant.hpp  constant_operations.hpp  ct_constant.hpp  ct_constant_operations.hpp  ct_eval.hpp  ct_vector.hpp  debug.hpp  diff.hpp  difftags.hpp  equation.hpp  eval.hpp  exception.hpp  expr.hpp  expr_operations.hpp  expression.hpp  expression_compile_time.hpp  expression_compile_time_operations.hpp  expression_interface.hpp  expression_run_time.hpp  expression_run_time_operations.hpp  expressions.h  forwards.h  function_symbol.hpp  integral.hpp  op_interface.hpp  op_tags.hpp  promote_traits.hpp  substitute.hpp  test_func.hpp  typelist.h  unary_expression.hpp  unary_operators.hpp  unary_operators_manipulation.hpp  unknown.hpp  unknown_func.hpp  (+5 more)
viennamath/compiletime/: binary_op_tags.hpp  ct_binary_expr.hpp  ct_constant.hpp  ct_equation.hpp  ct_eval.hpp  ct_expr.hpp  ct_function_symbol.hpp  ct_interval.hpp  ct_unary_expr.hpp  ct_variable.hpp  ct_vector.hpp  promote_traits.hpp  unary_op_tags.hpp
viennamath/compiletime/operations/: ct_constant.hpp  ct_ct.hpp  ct_expr.hpp  ct_variable.hpp
viennamath/manipulation/: apply_coordinate_system.hpp  binary_operators_manipulation.hpp  coefficient.hpp  diff.hpp  drop_dependent_terms.hpp  eval.hpp  expand.hpp  integral.hpp  integrate.hpp  latex.hpp  optimize.hpp  simplify.hpp  substitute.hpp  unary_operators_manipulation.hpp
viennamath/manipulation/detail/: binary_operations.hpp  binary_operators_manipulation.hpp  unary_operations.hpp  unary_operators_manipulation.hpp
viennamath/old/: analytic_integration.hpp  manipulation.hpp  operators.hpp  optimizer.h  traits.h
viennamath/operations/: binary_expression_operations.hpp  constant_operations.hpp  ct_constant_operations.hpp  expr_operations.hpp  expression_compile_time_operations.hpp  function_symbol_operations.hpp  unary_expression_operations.hpp  variable_operations.hpp
viennamath/runtime/: binary_expr.hpp  binary_expression.hpp  binary_operators.hpp  constant.hpp  equation.hpp  expr.hpp  expression_interface.hpp  function_symbol.hpp  functor_wrapper.hpp  integral.hpp  interval.hpp  numerical_quadrature.hpp  op_interface.hpp  rt_integral.hpp  symbolic_interval.hpp  unary_expr.hpp  unary_expression.hpp  unary_operators.hpp  variable.hpp  vector_expr.hpp
viennamath/runtime/operations/: binary_expression.hpp  constant.hpp  expr.hpp  function_symbol.hpp  rt_rt.hpp  unary_expression.hpp  variable.hpp
