# Tutorials:
ADD_EXECUTABLE(basic                basic.cpp)
ADD_EXECUTABLE(integration          integration.cpp)
ADD_EXECUTABLE(latex_output         latex_output.cpp)
ADD_EXECUTABLE(model_benchmark      model_benchmark.cpp)
ADD_EXECUTABLE(newton_solve         newton_solve.cpp)
ADD_EXECUTABLE(traversal            traversal.cpp)
ADD_EXECUTABLE(substitute           substitute.cpp)
ADD_EXECUTABLE(vector_expr          vector_expr.cpp)


